--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1199,3 +1199,17 @@ a:not([href]):not([tabindex]):hover {
 .smallLineHeight {
   line-height: 10pt;
 }
+
+/* ==========================================================================
+  Portfolio icon rotation
+   ========================================================================== */
+.rotate {
+  -moz-transition: all .2s linear;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
+}
+.rotate.down {
+  -moz-transform:rotate(-90deg);
+  -webkit-transform:rotate(-90deg);
+  transform:rotate(-90deg);
+}
